# plot-drawer

./: .gitignore  CMakeLists.txt  PlotDrawer.pro  README  dataloader.cpp  dataloader.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  plotdrawer.cpp  plotdrawer.h  renderthread.cpp  renderthread.h
samples/: sin-1000points-10period.plot  sin-10points-1period+errors.plot  sin-10points-1period.plot
